[package]
name = "grids"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
glam = "0.23.0"
serde = { version = "*", optional = true }
serde_derive = { version = "*", optional = true }
