[package]
name = "grids"
version = "0.1.2"
edition = "2021"
description = "2D grid data structure for games."
authors = ["Jakub Arnold <darthdeus@gmail.com>"]
license = "MIT"

[features]
default = []
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
glam = "0.23.0"
serde = { version = "*", optional = true }
serde_derive = { version = "*", optional = true }
