[package]
name = "grids"
version = "0.2.1"
edition = "2021"
description = "2D grid data structure for games."
authors = ["Jakub Arnold <darthdeus@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/darthdeus/grids"

[features]
default = []
serde = ["dep:serde", "dep:serde_derive"]

[dependencies]
glam = "0.24.1"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
